<resources>
    <string name="app_name">ShoeStore</string>
    <string name="sign_up_button_text"><u>Sign Up</u></string>
    <string name="login_welcome_title">Welcome</string>
    <string name="login_welcome_subtitle">Please login with your information</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="or_login_with">or Login with</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="shoe_company">Shoe Company:</string>
    <string name="shoe_size">Shoe Size:</string>
    <string name="shoe_description">Shoe Description:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="navigate_to_shoe_detail_screen">Navigate to Shoe detail screen</string>
</resources>
