<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetailFragment">

    <data>

        <variable
            name="shoeDetail"
            type="com.udacity.shoestore.viewmodel.ShoeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/padding_medium">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:alpha="0.7"
            android:labelFor="@+id/shoe_name_edittext"
            android:text="@string/shoe_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/shoe_name"
            android:inputType="text"
            android:paddingTop="0dp"
            android:text="@={shoeDetail.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_edittext"
            app:layout_constraintTop_toTopOf="@+id/shoe_name_label" />

        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:alpha="0.7"
            android:labelFor="@+id/shoe_company_edittext"
            android:text="@string/shoe_company"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edittext" />

        <EditText
            android:id="@+id/shoe_company_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/shoe_company"
            android:inputType="text"
            android:paddingTop="0dp"
            android:text="@={shoeDetail.shoeCompany}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edittext"
            app:layout_constraintTop_toTopOf="@+id/shoe_company_label" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:alpha="0.7"
            android:labelFor="@+id/shoe_size_edittext"
            android:text="@string/shoe_size"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_edittext" />

        <EditText
            android:id="@+id/shoe_size_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/shoe_size"
            android:inputType="numberDecimal"
            android:paddingTop="0dp"
            android:text="@={shoeDetail.shoeSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_description_edittext"
            app:layout_constraintTop_toTopOf="@+id/shoe_size_label" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:alpha="0.7"
            android:labelFor="@+id/shoe_description_edittext"
            android:text="@string/shoe_description"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edittext" />

        <EditText
            android:id="@+id/shoe_description_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:autofillHints="@string/shoe_description"
            android:inputType="textMultiLine"
            android:paddingTop="0dp"
            android:text="@={shoeDetail.shoeDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
            app:layout_constraintTop_toTopOf="@+id/shoe_description_label" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:background="@android:color/darker_gray"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>