<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <View
            android:id="@+id/login_section_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-32dp"
            android:background="@drawable/rounded_corner_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welcome_textview"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/welcome_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/login_welcome_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/welcome_subtitle_textview"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/welcome_subtitle_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:alpha="0.7"
            android:text="@string/login_welcome_subtitle"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/username_label"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:labelFor="@+id/username_edittext"
            android:text="@string/email_address"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/username_edittext"
            app:layout_constraintStart_toStartOf="@+id/username_edittext" />

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/check_icon"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toTopOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:labelFor="@+id/password_edittext"
            android:text="@string/password"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/password_edittext"
            app:layout_constraintStart_toStartOf="@+id/password_edittext" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_small"
            android:autofillHints="password"
            android:drawableEnd="@android:drawable/ic_lock_lock"
            android:inputType="textPassword"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toTopOf="@+id/rememberme_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/rememberme_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:alpha="0.7"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/remememberme_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:labelFor="@+id/rememberme_checkbox"
            android:text="@string/remember_me"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/rememberme_checkbox"
            app:layout_constraintStart_toEndOf="@+id/rememberme_checkbox"
            app:layout_constraintTop_toTopOf="@+id/rememberme_checkbox" />

        <TextView
            android:id="@+id/forgotpassword_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:alpha="0.7"
            android:paddingHorizontal="@dimen/padding_xsmall"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="@+id/remememberme_textview"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/loginwith_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signup_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_xsmall"
            android:background="#FFFFFF"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:padding="0dp"
            android:text="@string/sign_up_button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/loginwith_textview"
            app:layout_constraintEnd_toStartOf="@+id/loginwith_textview"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginwith_textview" />

        <TextView
            android:id="@+id/loginwith_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:textSize="@dimen/text_size_small"
            android:alpha="0.7"
            android:text="@string/or_login_with"
            app:layout_constraintBottom_toTopOf="@+id/github_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signup_button" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:contentDescription="facebook icon"
            android:src="@drawable/facebook_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/github_icon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@android:color/black"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/github_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:contentDescription="github icon"
            android:src="@drawable/github_icon"
            app:layout_constraintBottom_toBottomOf="@id/facebook_icon"
            app:layout_constraintEnd_toStartOf="@+id/google_icon"
            app:layout_constraintStart_toEndOf="@+id/facebook_icon"
            app:tint="@android:color/black"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="google icon"
            android:src="@drawable/google_icon"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/github_icon"
            app:tint="@android:color/black"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>